fix legend overflow issue blocking clicks on first element in search results; set activation url of portfolio results to item details page

--- a/plugins/geoplatform-search/angular/src/app/results/portfolio/legend/legend.component.less
+++ b/plugins/geoplatform-search/angular/src/app/results/portfolio/legend/legend.component.less
@@ -11,6 +11,7 @@
     &.is-collapsed {
         height: 0;
         opacity: 0;
+        overflow: hidden;
     }
 }
 
